# e-commerce-api

./: =3.0.0  LICENSE  README.md  alembic.ini  pyproject.toml  requirements.txt
app/: database.py  main.py  schemas.py
app/core/: config.py
migrations/: env.py
migrations/versions/: 1c1852ea2e3d_added_category_and_product_models.py  63ac45e8cc73_added_more_user_details.py  91a448caf646_added_more_user_details.py  9335c6c9d20b_user_model.py  96e4551db268_added_more_user_details.py
product/: models.py
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_users.py
users/: __init__.py  authentication.py  crud.py  models.py  schemas.py
users/api/: controllers.py
